# threads-like-Network-v2.0

./: .gitignore  CONVENTIONS.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose-deploy.yml  docker-compose-local-dev.yml  docker-compose-local-prod.yml  docker-compose-prod.yml  docker-compose-smoke-test.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml
backend/core/: __init__.py  asgi.py  celery.py  oldsettings.py  prod_settings.py  settings.py  urls.py  wsgi.py
backend/nginx/: Dockerfile  nginx.conf
backend/nginx/conf.d/: app.conf
backend/scripts/: build-prod.sh
backend/tests/: test_celery_tasks.py  test_repost_content.py
backend/threads/: admin.py  apps.py  models.py  repositories.py  tasks.py  urls.py
backend/threads/common/: base_exception.py  exceptions.py
backend/threads/common/exceptions/: repository_exceptions.py  use_case_exceptions.py
backend/threads/domain/: entities.py  enum.py  repository.py
backend/threads/infrastructure/: cache.py  like_repository.py  signals.py
backend/threads/interface/: serializers.py  views.py
backend/threads/interface/comments/: comment_view.py  (+3 more)
backend/threads/migrations/: 0001_initial.py  0002_user_followers_count_user_followings_count_and_more.py  0003_user_is_repost_post_comment.py  0004_comment_is_repost_post_is_repost.py  0005_alter_comment_parent_comment_and_more.py  0006_likecomment_likepost.py  0007_remove_user_is_repost_follow.py  0008_comment_app_comment_repost__932f99_idx_and_more.py  0009_alter_likecomment_unique_together_and_more.py
(+107 files in other folders)
