[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sky Rover <weizhil312@gmail.com>"]

[tool.poetry.dependencies]  # 生產環境所需依賴
python = ">=3.11"
django = ">=5.2.1,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-cors-headers = ">=4.7.0,<5.0.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
djangorestframework-simplejwt = "*"
openai = ">=1.93.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
google-search-results = ">=2.4.2,<3.0.0"
gunicorn = "^21.2.0"
celery = {extras = ["redis"], version = "^5.5.3"}
redis = ">=4.5.2,<5.0.2"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.1.0"
drf-spectacular = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
